# advent-of-code-2025

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
include/: problem.h  problem1.h  problem2.h  problem3.h  problem4.h  problem5.h  problem_set.h  problems.h
inputs/: test1.txt  test5.txt
scripts/: build-debug.sh  build-release.sh
src/: main.cpp  problem1.cpp  problem2.cpp  problem3.cpp  problem4.cpp  problem5.cpp
